@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-01T01:40:54Z",
+  "timestamp" : "2022-06-01T08:23:45Z",
   "count_outdated" : 303,
   "uniques_outdated" : 167,
   "count" : 333,
-  "uniques" : 188,
+  "uniques" : 189,
   "clones" : [
     {
       "timestamp": "2022-05-18T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -67,6 +67,13 @@
       "count_minmax": [ 1, 4 ],
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ]
+    },
+    {
+      "timestamp": "2022-06-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
